--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/horaciocoronel/react-webpack-starter/issues"
   },
-  "homepage": "https://github.com/horaciocoronel/react-webpack-starter#readme"
+  "homepage": "https://github.com/horaciocoronel/react-webpack-starter#readme",
+  "dependencies": {
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  }
 }
